fix: the minimum width limit of the window is too large #544
close #544

--- a/src/renderer/src/assets/styles/index.scss
+++ b/src/renderer/src/assets/styles/index.scss
@@ -176,7 +176,7 @@ body,
 #content-container {
   border-top-left-radius: 12px;
   border-left: 0.5px solid var(--color-border);
-  box-shadow: -2px 0px 20px -4px rgba(0, 0, 0, 0.08);
+  box-shadow: -2px 0px 20px -4px rgba(0, 0, 0, 0.06);
 }
 
 .loader {
